Fixed some items on IE

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -7,6 +7,7 @@
   text-align: center
 
   > a
+    display: inline-block
     +default-button(full)
     text-align: center
     padding:
