--- a/source/stylesheets/partials/_accordion.sass
+++ b/source/stylesheets/partials/_accordion.sass
@@ -15,6 +15,7 @@
 
     > li
       +background(linear-gradient(palette(blue, gradient-top), palette(blue, gradient-bottom)) left repeat)
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#1075AE, endColorstr=#0D6495)
       border-radius: 4px
       color: white
       font-weight: bold
